force-app/main/default/objects/BrillioFC__Application_Details__c/BrillioFC__Application_Details__c.object-meta.xml
<CustomObject>
    <label>ForceClinc Application Detail</label>
    <nameField>
        <label>ForceClinc Application Details  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ForceClinc Application Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>