force-app/main/default/objects/BrillioFC__Application_Details__c/fields/BrillioFC__Application_Label__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Application_Label__c</fullName>
    <label>Application Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>