force-app/main/default/objects/BrillioFC__Application_Details__c/fields/BrillioFC__ApplicationId__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__ApplicationId__c</fullName>
    <externalId>true</externalId>
    <label>ApplicationId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>