force-app/main/default/objects/BrillioFC__Application_Details__c/fields/BrillioFC__IsAccessible__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__IsAccessible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAccessible</label>
    <type>Checkbox</type>
</CustomField>