force-app/main/default/objects/BrillioFC__Application_Details__c/fields/BrillioFC__isCustom__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__isCustom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCustom</label>
    <type>Checkbox</type>
</CustomField>