force-app/main/default/objects/BrillioFC__Application_Details__c/fields/BrillioFC__IsVisible__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__IsVisible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsVisible</label>
    <type>Checkbox</type>
</CustomField>