force-app/main/default/objects/BrillioFC__Application_Details__c/fields/BrillioFC__Org_Detail__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Org_Detail__c</fullName>
    <label>ForceClinic Org Detail</label>
    <referenceTo>BrillioFC__Org_Details__c</referenceTo>
    <relationshipLabel>ForceClinc Application Details</relationshipLabel>
    <relationshipName>Application_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>