force-app/main/default/objects/BrillioFC__Application_Details__c/fields/BrillioFC__Type__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TabSet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>